CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(gjk)

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -g")

FIND_PACKAGE(OGRE REQUIRED)
FIND_PACKAGE(Qt5Core REQUIRED)

INCLUDE_DIRECTORIES(
  ${OGRE_INCLUDE_DIR}
  )

LINK_DIRECTORIES(
  ${OGRE_LIBRARY_DIR}
  )

SET(CMAKE_AUTOMOC ON)

SET(LIBS OgreMain boost_system)

SET(HEADERS object.hpp)
SET(SOURCES object.cpp main.cpp)

ADD_EXECUTABLE(${PROJECT_NAME}
        ${HEADERS}
        ${SOURCES}
        )

TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${LIBS} )
QT5_USE_MODULES(${PROJECT_NAME} Quick)